<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csa.cashsasa.controller.RegStepThreeActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/margin_between"
                android:layout_marginStart="@dimen/margin_between"
                android:layout_marginTop="@dimen/margin_between"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:onClick="previousStep"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:tint="@color/whiteColor" />

        </RelativeLayout>
    </ScrollView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/phase_three_inputs"
        android:layout_below="@+id/scroll_5"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/reg_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_assignment_ind_black_24dp"
                android:tint="@color/whiteColor" />

            <TextView
                android:id="@+id/loan_limit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/reg_pic"
                android:layout_centerHorizontal="true"
                android:text="@string/register_head"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/phase_three_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/finish_btn"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/pin_label_margin"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:text="@string/phone_number"
                android:theme="@style/TextViewTheme" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_label"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginStart="@dimen/margin_left"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:id="@+id/help_text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_phone"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginRight="@dimen/margin_right"
                android:layout_marginStart="@dimen/margin_left"
                android:text="@string/help_text_phone"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/pin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/help_text_phone"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/pin_label_margin"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_between"
                android:text="@string/password"
                android:theme="@style/TextViewTheme" />

            <LinearLayout
                android:id="@+id/pin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/pin_label"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginRight="@dimen/margin_right">

                <EditText
                    android:id="@+id/pin_first_edittext"
                    style="@style/pin_edittext_style"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_content_desc"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/EditTextTheme" />

                <EditText
                    android:id="@+id/pin_second_edittext"
                    style="@style/pin_edittext_style"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_content_desc"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/EditTextTheme" />

                <EditText
                    android:id="@+id/pin_third_edittext"
                    style="@style/pin_edittext_style"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_content_desc"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/EditTextTheme" />

                <EditText
                    android:id="@+id/pin_forth_edittext"
                    style="@style/pin_edittext_style"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/pin_content_desc"
                    android:textColor="@color/colorPrimary"
                    android:theme="@style/EditTextTheme" />

                <EditText
                    android:id="@+id/pin_hidden_edittext"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@null"
                    android:contentDescription="@string/pin_content_desc"
                    android:cursorVisible="false"
                    android:gravity="center_horizontal"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:textColor="#00000000" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/tlc_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pin_layout"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_between"
                android:text="@string/tlc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/default_text_size"
                android:theme="@style/MyCheckBox" />

        </RelativeLayout>

    </ScrollView>


    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/gradient"
        android:onClick="finishStep"
        android:text="@string/finish_btn"
        android:textColor="@color/whiteColor"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginLeft="@dimen/margin_left"
        />


</RelativeLayout>



